cmd/pint/tests/0056_prometheus_required.txt
http response prometheus / 500 Offline
http start prometheus 127.0.0.1:7056

pint.ok -l debug --no-color lint rules
! stdout .
stderr 'level=error msg="Query returned an error" error="server error: 500" query=count\(up\) uri=http://127.0.0.1:7056'
stderr 'level=error msg="Query returned an error" error="server error: 500" query=/api/v1/status/config uri=http://127.0.0.1:7056'
stderr 'level=info msg="Problems found" Warning=12'

-- rules/1.yaml --
- record: one
  expr: up == 0
  labels:
    path: a
- record: two
  expr: up == 0
  labels:
    path: a
-- rules/2.yaml --
- record: one
  expr: up == 0
  labels:
    path: b
- record: two
  expr: up == 0
  labels:
    path: b

-- .pint.hcl --
prometheus "prom" {
  uri      = "http://127.0.0.1:7056"
  required = false
}
parser {
  relaxed = [".*"]
}

rule{}
